--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "autoload": {
         "psr-4": {
             "Tapper\\": "src/"
-        }
+        },
+        "files": [
+            "src/Runtime/helpers.php"
+        ]
     },
     "authors": [
         {
@@ -14,5 +17,23 @@
             "email": "mateusz@cholewka.com.pl"
         }
     ],
-    "require": {}
+    "require": {
+        "react/event-loop": "^1.5",
+        "php-tui/php-tui": "^0.2.1",
+        "react/socket": "^1.16",
+        "clue/ndjson-react": "^1.3",
+        "php-di/php-di": "^7.0"
+    },
+    "require-dev": {
+        "laravel/pint": "^1.21",
+        "pestphp/pest": "^3.8"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    },
+    "bin": [
+        "bin/tapper"
+    ]
 }
