Add tests action (#3)
* ci: run pest on pull request and push

* ci: add static analysis

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,9 @@
     },
     "bin": [
         "bin/tapper"
-    ]
+    ],
+    "scripts": {
+        "test:unit": "pest --compact",
+        "test:lint": "pint --test"
+    }
 }
